--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,6 @@ jobs:
       - LFTP_USER:  ${{ secrets.LFTP_USER }}
       - LFTP_PASSWORD: ${{ secrets.LFTP_PASSWORD }}
       - LFTP_HOST: ${{ secrets.LFTP_HOST }}
-    run: sh deploy.sh
+    steps:
+    - name: Deploy
+      run: sh deploy.sh
