--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
       LFTP_HOST: ${{ secrets.LFTP_HOST }}
     steps:
     - name: Deploy
-      run: sh .github/workflows/deploy.sh
+      run: pwd
