--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
       LFTP_HOST: ${{ secrets.LFTP_HOST }}
     steps:
     - name: Deploy
-      run: sh deploy.sh
+      run: lftp -e "set ssl:check-hostname no; mirror -R --only-newer -F ../../tasks/*; bye;" -u $LFTP_USER,$LFTP_PASSWORD $LFTP_HOST
