--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,5 +13,7 @@ jobs:
       LFTP_PASSWORD: ${{ secrets.LFTP_PASSWORD }}
       LFTP_HOST: ${{ secrets.LFTP_HOST }}
     steps:
+    - name: Install lftp
+      run: sudo apt install lftp
     - name: Deploy
       run: lftp -e "set ssl:check-hostname no; mirror -R --only-newer -F ../../tasks/*; bye;" -u $LFTP_USER,$LFTP_PASSWORD $LFTP_HOST
