--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,6 @@ jobs:
     - name: Install lftp
       run: sudo apt install lftp
     - name: Deploy
-      run: lftp -e "set ssl:check-hostname no; mirror -R --only-newer -F ../../tasks/*; bye;" -u $LFTP_USER,$LFTP_PASSWORD $LFTP_HOST
+      run: |
+        cd ${GITHUB_WORKSPACE}
+        lftp -e "set ssl:check-hostname no; mirror -R --only-newer -F ../../tasks/*; bye;" -u $LFTP_USER,$LFTP_PASSWORD $LFTP_HOST
