--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,5 @@ jobs:
       run: sudo apt install lftp
     - name: Deploy
       run: |
+        find tasks
         lftp -e "set ssl:check-hostname no; mirror -R --only-newer -F tasks/*; bye;" -u $LFTP_USER,$LFTP_PASSWORD $LFTP_HOST
