--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
     - name: Install lftp
       run: sudo apt install lftp
+    - uses: actions/checkout@v2
     - name: Deploy
       run: |
         find tasks
