--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
       run: sudo apt install lftp
     - uses: actions/checkout@v2
     - name: Deploy
-      run: lftp -e "set ftp:ssl-allow no; set ssl:check-hostname no; mirror -R --only-newer -F tasks/*; bye;" -u $LFTP_USER,$LFTP_PASSWORD $LFTP_HOST
+      run: sh .github.com/workflow/deploy.sh
